[package]
name = "tracker"
version = "0.1.0"
authors = ["C Ding <cding@cs.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing = "0.1"
# tracing-subscriber = "0.2.0"
log4rs = "1.0.0"
log = "0.4.14"
