[package]
name = "tracker"
version = "0.1.0"
authors = ["C Ding <cding@cs.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing = "0.1"
# tracing-subscriber = "0.2.0"
log4rs = "1.0.0"
log = "0.4.14"
nanorand = "0.6.1"
csv = "1.1.6"
serde = "1.0.130"
clap = "2.33.3"

[profile.dev]
opt-level = 0